Fixed long project name would wrap unexpectedly

--- a/public_html/components/todolist/style.css
+++ b/public_html/components/todolist/style.css
@@ -64,6 +64,7 @@
     height: 28px;
     background-color: #747474;
     width: 100%;
+    overflow: hidden;
     float: left;
 }
 
@@ -71,7 +72,7 @@
     margin-top: 2px;
     margin-left: 20px;
     font-size: 20px;
-    float: left;
+    white-space: nowrap;
 }
 
 .todolist-footer {
